# tank-battle

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  for_codex.md
assets/maps/single/: hard_ai_test.txt  map_test.txt  normal_ai_test.txt
docs/: 01_项目概述与需求分析.md  02_游戏规则.md  03_总体设计.md  04_模块详细设计.md  05_开发环境与构建.md  06_数据与接口约定.md  07_测试记录.md  08_开发进度.md  09_答辩准备.md  10_开发日志.md
include/ai/: ai_context.hpp  ai_controller.hpp  enemy_ai.hpp  tank_command.hpp
include/core/: game.hpp
include/entity/: base.hpp  bullet.hpp  enemy_tank.hpp  enemy_type.hpp  entity.hpp  item.hpp  player_tank.hpp  tank.hpp
include/network/: network_message.hpp  network_session.hpp  network_types.hpp
include/world/: collision.hpp  map.hpp  tile.hpp
scripts/: test_hard_ai.sh
src/: main.cpp
src/ai/: enemy_ai.cpp
src/core/: game.cpp
src/entity/: base.cpp  bullet.cpp  enemy_tank.cpp  item.cpp  player_tank.cpp  tank.cpp
src/network/: network_message.cpp  network_session.cpp
src/world/: collision.cpp  map.cpp  tile.cpp
tests/: ai_test.cpp  map_test.cpp
